@@ -17,6 +17,8 @@
 
 	<H3>Changes</H3>
 
+	<LI>The HTML parser now allows BODY to auto-close HEAD
+	and visa-versa.
 
 	<H3>Bug Fixes</H3>
 
@@ -34,6 +36,10 @@
 
 	<LI>Header and footer comments would interfere with the
 	top and bottom margin settings.
+
+	<LI>Fixed a bug in the htmlReadFile() function which
+	caused user-provided title pages not to be displayed in
+	PS or PDF output.
 
 </UL>
 
